Modify the number and the plugin loading number right, small plug-in management framework would die into the circulation, have been loaded, solution to change the screen resolution, and overlap of the clipboard interface widgets interface Bug, modify the clipboard scroll bar is not the problem, find the column to remove icon is not round, adjust the clipboard edit box transparency is not correct, change the transparency

--- a/src/plugins/clipboardPlugin/qss/sideBarEditArea.css
+++ b/src/plugins/clipboardPlugin/qss/sideBarEditArea.css
@@ -2,7 +2,7 @@
 QWidget#EditorWidget {
     width:400px;
     height:338px;
-    border:1px solid rgba(255, 255, 255, 75%);
+    border:0px solid rgba(255, 255, 255, 75%);
     border-radius:6px;
 }
 
